objects/APTS_BulkLoadDefaults__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting is used in bulk upload to set default values in bulk upload process.</description>
    <fields>
        <fullName>APTS_Configuration_LineItem__c</fullName>
        <description>specify default value for Configuration LineItem</description>
        <label>Configuration LineItem</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Configuration_Reference_Id__c</fullName>
        <description>specify default value for Configuration Reference Id</description>
        <label>Configuration Reference Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Label__c</fullName>
        <description>specify default value for Label</description>
        <label>Label</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Local_Config_Sys_Id__c</fullName>
        <description>specify default value for Local Configurator System Id</description>
        <label>Local Configurator System Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Project_Reference_Id__c</fullName>
        <description>specify default value for Project Reference Id</description>
        <label>Project Reference Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Section__c</fullName>
        <description>specify default value for Section</description>
        <label>Section</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Bulk Upload Defaults</label>
</CustomObject>